crates/plotnik-lib/tests/02-parser/recovery_validation/suppressive_capture_camel_case.txt
(a) @_fooBar
==== diagnostics ====
error: capture names must be snake_case
 --> query.ptk:1:5
  |
1 | (a) @_fooBar
  |     ^^^^^^^^
  |
help: use `@_foo_bar`
  |
1 - (a) @_fooBar
1 + (a) @_foo_bar
  |
help: captures become fields in the output
